<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imagePlayer"
        android:layout_width="120dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/no_image_avilable"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/presentation_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagePlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/secondPlayerPresentation"
        android:background="@color/nbaBlue">

        <TextView
            android:id="@+id/namePlayer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="23sp"
            tools:text="Jayson Tatum"/>

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/namePlayer"
            android:id="@+id/teamText"
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:text="@string/team"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_margin="3dp"/>

        <ImageView
            android:id="@+id/iVplayerTeam"
            android:layout_width="70dp"
            android:layout_height="80dp"
            tools:src="boston-celtics-logo.svg"
            app:layout_constraintStart_toEndOf="@id/teamText"
            app:layout_constraintTop_toBottomOf="@id/namePlayer"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/playerPositionText"
            app:layout_constraintStart_toEndOf="@id/iVplayerTeam"
            app:layout_constraintTop_toBottomOf="@id/namePlayer"
            android:layout_width="70dp"
            android:layout_height="90dp"
            android:text="@string/player_position"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_margin="7dp"/>

        <TextView
            android:id="@+id/player_position"
            app:layout_constraintStart_toEndOf="@id/playerPositionText"
            app:layout_constraintTop_toBottomOf="@id/namePlayer"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="70dp"
            android:layout_height="90dp"
            tools:text = "Alero"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_margin="7dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/secondPlayerPresentation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/imagePlayer"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/nbaBlue"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textPlayerHeigth"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/player_heigth"
            />

        <TextView
            android:id="@+id/textPlayerPounds"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/player_pounds"
            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/stats_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/secondPlayerPresentation"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:cardCornerRadius="16dp"
        android:elevation="@dimen/cardview_default_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/statsTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/stats_title"
                android:background="@color/nbaRed"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <LinearLayout
                android:id="@+id/statsNames"
                app:layout_constraintTop_toBottomOf="@id/statsTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/statsName">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/stats_season"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/points_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/fouls_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/assists_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/rebounds_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/steals_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPlayerStats"
                app:layout_constraintTop_toBottomOf="@id/statsNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>